Use argLine in properties to allow overriding
Also use --enable-preview in javadoc plugin in case its required to deploy EA versions